# hexlet-python-env-setup

./: pyproject.toml
python_setup_poetry/scripts/: say_hello.py
