[tool.poetry]
name = "python-setup-poetry"
version = "0.1.0"
description = ""
authors = ["Eugen Bazhenov <wtf.czabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.17.2"
flake8 = "^6.1.0"

[tool.poetry.scripts]
say-hello = "python_setup_poetry.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
